syntax = "proto3";
 
option csharp_namespace = "Questions.API.Grpc.Services";
 
package QuestionsGrpcService;
 
service QuestionsGrpcService {
  rpc AddQuestion (AddQuestionRequest) returns (AddQuestionResponse);
}
 
message AddQuestionRequest {
  string content = 1;
  string title = 2;
  int32 type = 3;
  int32 lvl = 4;
  bool isFree = 5;
  string Hint = 6;
}
 
message AddQuestionResponse {
  int32 id = 1;
}